//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  name String
  dateFormat String [default: 'DD/MM/YYYY']
  createdAt DateTime [default: `now()`, not null]
  password String [not null]
  points Int [not null, default: 0]
  level Int [not null, default: 1]
  tasks Task [not null]
  streak Streak
  userChallenges UserChallenge [not null]
  userBadges UserBadge [not null]
  taskCounter TaskCounter
  taskDailyStats TaskDailyStat [not null]
  categories Category [not null]
}

Table Task {
  id String [pk]
  emoji String
  title String [not null]
  description String
  status TASK_STATUS [not null, default: 'TODO']
  dueDate String [not null]
  createdAt DateTime [default: `now()`, not null]
  categoryId String
  userId String [not null]
  impact TASK_IMPACT [not null]
  relativeOrder Int [not null]
  completedAt String
  checklistItems ChecklistItem [not null]
  statusHistory StatusUpdate [not null]
  category Category
  user User [not null]
}

Table Category {
  id String [pk]
  name String [not null]
  tasks Task [not null]
  userId String [not null]
  user User
}

Table ChecklistItem {
  id String [pk]
  title String [not null]
  completed Boolean [not null, default: false]
  order Int [not null]
  taskId String [not null]
  task Task [not null]
}

Table StatusUpdate {
  id String [pk]
  status TASK_STATUS [not null]
  updatedAt String
  taskId String [not null]
  task Task [not null]
}

Table Streak {
  id String [pk]
  startDate DateTime [default: `now()`, not null]
  updatedAt String
  current Int [not null, default: 0]
  longest Int [not null, default: 0]
  userId String [unique, not null]
  user User [not null]
}

Table Badge {
  code String [pk]
  name String [not null]
  description String [not null]
  icon String
  userBadges UserBadge [not null]
}

Table UserBadge {
  id String [pk]
  earnedAt DateTime [default: `now()`, not null]
  userId String [not null]
  badgeId String [not null]
  user User [not null]
  badge Badge [not null]

  indexes {
    (userId, badgeId) [unique]
  }
}

Table TaskCounter {
  id String [pk]
  userId String [unique, not null]
  updatedAt String
  completedToday Int [not null, default: 0]
  completedAfterTenPm Int [not null, default: 0]
  completedBeforeNoon Int [not null, default: 0]
  completedOnWeekend Int [not null, default: 0]
  completedTiny Int [not null, default: 0]
  categorized Int [not null, default: 0]
  completed Int [not null, default: 0]
  total Int [not null, default: 0]
  user User [not null]
}

Table TaskDailyStat {
  id String [pk]
  date String [not null]
  created Int [not null, default: 0]
  completed Int [not null, default: 0]
  inProgress Int [not null, default: 0]
  userId String [not null]
  user User [not null]

  indexes {
    (userId, date) [unique]
  }
}

Table Challenge {
  id String [pk]
  title String [not null]
  description String [not null]
  type CHALLENGE_TYPE [not null]
  startDate DateTime [default: `now()`, not null]
  endDate DateTime [not null]
  criteria Json [not null]
  userChallenges UserChallenge [not null]
}

Table UserChallenge {
  id String [pk]
  completed Boolean [not null, default: false]
  progress Int [not null, default: 0]
  startDate DateTime [default: `now()`, not null]
  endDate DateTime [not null]
  challengeId String [not null]
  userId String [not null]
  challenge Challenge [not null]
  user User [not null]
}

Enum TASK_STATUS {
  TODO
  IN_PROGRESS
  DONE
}

Enum TASK_IMPACT {
  HIGH_IMPACT_HIGH_EFFORT
  HIGH_IMPACT_LOW_EFFORT
  LOW_IMPACT_HIGH_EFFORT
  LOW_IMPACT_LOW_EFFORT
}

Enum CHALLENGE_TYPE {
  DAILY
  WEEKLY
  MONTHLY
  CUSTOM
}

Ref: Task.categoryId > Category.id

Ref: Task.userId > User.id [delete: Cascade]

Ref: Category.userId > User.id [delete: Cascade]

Ref: ChecklistItem.taskId > Task.id [delete: Cascade]

Ref: StatusUpdate.taskId > Task.id [delete: Cascade]

Ref: Streak.userId - User.id [delete: Cascade]

Ref: UserBadge.userId > User.id [delete: Cascade]

Ref: UserBadge.badgeId > Badge.code

Ref: TaskCounter.userId - User.id [delete: Cascade]

Ref: TaskDailyStat.userId > User.id [delete: Cascade]

Ref: UserChallenge.challengeId > Challenge.id

Ref: UserChallenge.userId > User.id [delete: Cascade]